# OCR-Sample-WebApp

./: .gitignore  README.md
BackEnd/: AbsOCRAPI.py  Pipfile  main.py  pyproject.toml  server_setting.json
BackEnd/DXSuite/: API.py  Interfaces.py
BackEnd/EasyOCR/: API.py  Interface.py
BackEnd/PaddleOCR/: API.py  Interface.py
FrontEnd/: app.vue  nuxt.config.ts  package-lock.json  package.json
FrontEnd/assets/css/: global.css
FrontEnd/components/: Camera.vue  MenuButton.vue  PrimeMenuButton.vue
FrontEnd/pages/: cameraScreen.vue
