[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SO 高林秀 <s.takabayashi@super-one.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
easyocr = "^1.7.1"
paddleocr = "^2.7.0.3"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
